optimize read-path decode hot paths
Back ColumnPath with a dot-joined string, slice validity bits at word
level, and seal the binary heap buffer read-only once.

on-behalf-of: @multiversio <info@multivers.io>